give general layout & styles for side-content

--- a/index.html
+++ b/index.html
@@ -169,16 +169,41 @@
       <div class="side-content">
         <div class="announcements-heading main-content-heading">Announcements</div>
         <div class="announcements-card">
-          <div class="article">Site Maintenance</div>
-          <div class="article">Community Share Day</div>
-          <div class="article">Updated Privacy Policy</div>
+          <div class="article-heading">
+            Site Maintenance
+            <p class="article-text">Vestibulum condimentum tellus lacus, in accumsan elit maximus ac. Donec hendrerit sodales congue...</p>
+          </div>
+          <div class="article-heading">
+            Community Share Day
+            <p class="article-text">Nam vel lectus tincidunt, rutrum nulla eu, ornare libero. Aliquam dictum accumsan porttitor...</p>
+          </div>
+          <div class="article-heading article-3">
+            Updated Privacy Policy
+            <p class="article-text">Phasellus efficitur nisi eget elit consectetur, eget condimentum ante auctor. Cras  fringilla sagittis sem in mattis...</p>
+          </div>
         </div>
         <div class="trending-heading main-content-heading">Trending</div>
         <div class="trending-card">
-          <div class="user-list">@tegan</div>
-          <div class="user-list">@morgan</div>
-          <div class="user-list">@kendall</div>
-          <div class="user-list">@alex</div>
+          <div class="user-list">
+            <div>@tegan</div>
+            <p>World Peace Builder</p>
+            <img src="images/tegan.png" alt="user avatar" class="bg-add-tegan">
+          </div>
+          <div class="user-list">
+            <div>@morgan</div>
+            <p>Super Cool Project</p>
+            <img src="images/morgan.png" alt="user avatar">
+          </div>
+          <div class="user-list">
+            <div>@kendall</div>
+            <p>Life Changing App</p>
+            <img src="images/kendall.png" alt="user avatar">
+          </div>
+          <div class="user-list">
+            <div>@alex</div>
+            <p>No Traffic Maker</p>
+            <img src="images/alex.png" alt="user avatar" class="bg-add-alex">
+          </div>
         </div>
       </div>
     </div>
